# TicTacToe

./: .gitignore  CMakeLists.txt  README.md
cmake/: arch.cmake  packaging.cmake  version.cmake  version.h.in
src/: Application.cpp  Application.h  CMakeLists.txt  main.cpp
src/entities/: GameFactory.cpp  GameFactory.h  Human.cpp  Human.h  PlayerQueue.cpp  PlayerQueue.h  TicTacToeBoard.cpp  TicTacToeBoard.h  TicTacToeGame.cpp  TicTacToeGame.h  TicTacToeGameFactory.cpp  TicTacToeGameFactory.h
src/interfaces/: IBoard.h  IGameFactory.h  IPlayer.h  IPlayerQueue.h  ITicTacToeGame.h  ITicTacToeGameFactory.h  IUI.h
src/structures/: GameResults.cpp  GameSettings.cpp  GameStatus.cpp  Move.cpp
src/ui/: GUI.cpp  GUI.h
test/: ApplicationTests.cpp  CMakeLists.txt  Example.cpp  TicTacToeGameTests.cpp  googletest-download.cmake  googletest.cmake
test/gtestResources/: googletest-download.cmake
test/mocks/: MockGameFactory.h  MockTicTacToeGame.h  MockUI.h
test/tests/: ApplicationTests.cpp  GameFactoryTests.cpp  HumanTests.cpp  PlayerQueueTests.cpp  TicTacToeBoardTests.cpp  TicTacToeGameTests.cpp
test/tests/mocks/: MockBoard.h  MockGameFactory.h  MockPlayer.h  MockPlayerQueue.h  MockTicTacToeGame.h  MockTicTacToeGameFactory.h  MockUI.h
